# handcalcs-report

./: README.md  pyproject.toml
src/handcalcs/: render.py
src/report/: __init__.py  categorizer.py  converters.py  formatters.py  renderer.py  report.py  types.py
