[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "handcalcs-report"
authors = [{ name = "Daniel" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
description = "A report-oriented fork of handcalcs for structured calculation notebooks"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "more_itertools",
    "innerscope >= 0.7.0",
    "pyparsing",
]

[project.urls]
Source = "https://github.com/niel1603/handcalcs-report"
Upstream = "https://github.com/connorferster/handcalcs"

[project.optional-dependencies]
exporters = ["nb-hideinputs"]
doc = ["sphinx"]

[tool.coverage.paths]
source = ["handcalcs_report", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["handcalcs_report"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pint>=0.24.4",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "sympy>=1.14.0",
    "jupyterlab>=4.4.4",
    "forallpeople>=2.7.1",
    "black>=25.1.0",
]
